--- a/.classpath
+++ b/.classpath
@@ -5,5 +5,7 @@
 	<classpathentry kind="lib" path="lib/junit-4.10.jar"/>
 	<classpathentry kind="lib" path="lib/lucene-core-4.10.3.jar"/>
 	<classpathentry kind="lib" path="lib/lucene-analyzers-common-4.10.3.jar"/>
+	<classpathentry kind="lib" path="lib/lucene-queries-4.10.3.jar"/>
+	<classpathentry kind="lib" path="lib/lucene-queryparser-4.10.3.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
